save progress report paper work

--- a/papers/final/Makefile
+++ b/papers/final/Makefile
@@ -1,7 +1,7 @@
 default: paper.pdf
 
 paper.pdf: paper.tex paper.bib
-	pdflatex paper
-	bibtex paper
-	pdflatex paper
-	pdflatex paper
+	latexmk -bibtex -pdf paper
+
+watch:
+	latexmk -bibtex -pdf -pvc paper
