add some midi deps and paper work

--- a/environment.yml
+++ b/environment.yml
@@ -12,6 +12,9 @@ dependencies:
   - black
   - pylint
   - jupyter
+  - music21
   - pip
   - pip:
       - note-seq
+      - pypianoroll
+      - pretty-midi
